# CNetworkProtocol

client/: CMakeLists.txt
client/include/: copy.h  fileProcessing.h
client/src/: copy.c  fileProcessing.c  main.c
clientv20221004/: CMakeLists.txt
clientv20221004/include/: fileProcessor.h  header.h
clientv20221004/src/: fileProcessor.c  main.c
serverv20221004/: CMakeLists.txt
serverv20221004/include/: serverContext.h
serverv20221004/src/: main.c  serverContext.c
